fixed alignment issues with certain menu-item descriptors

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ body {
 }
 
 .menu-item-header {
-    text-align: center;
+    text-align: left;
     border-bottom: 1px solid #00000033;
     list-style: none;
     padding-left: 0;
